# CUDA-INT8-Inference-Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cpu-test.yml
docs/: kernel_design.md
include/: cpu_reference.hpp  inference_engine.cuh  kernels.cuh
scripts/: generate_sample_data.py
src/: activation.cu  cpu_reference.cpp  inference_engine.cu  main.cu  matmul.cu  quantize.cu
tests/: test_cpu_reference.cpp  test_gpu_kernels.cu
